check_output.txt
C:\Users\USER\Desktop\flashcard\js\api-service.js:794
    async getUniqueCategories(userId) {
          ^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected identifier 'getUniqueCategories'
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.17.1
